解决单元测试jar包依赖问题

--- a/springboottest10/src/main/resources/application.properties
+++ b/springboottest10/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mail.host=smtp.qq.com
-spring.mail.username=hayashihuu@qq.com
-spring.mail.password=Hayashihuu1
+spring.mail.username=594682797
+spring.mail.password=yyrgnptnpcntbfhi
 spring.mail.port=25
 spring.mail.protocol=smtp
 spring.mail.default-encoding=UTF-8
