--- a/springboottest10/src/main/resources/application.properties
+++ b/springboottest10/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.mail.host=smtp.qq.com
-spring.mail.username=594682797
+spring.mail.username=594682797@qq.com
 spring.mail.password=yyrgnptnpcntbfhi
-spring.mail.port=25
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.port=465
 spring.mail.protocol=smtp
 spring.mail.default-encoding=UTF-8
