solr cloud 配置对于linux服务器的上传 文件的解压 springboot与solrj的整合

--- a/springboottest16/src/main/resources/application.yml
+++ b/springboottest16/src/main/resources/application.yml
@@ -3,10 +3,13 @@ spring:
     mode: LEGACYHTML5
     cache: true
   datasource:
-    url: jdbc:mysql://localhost:3306/mybtis_test01?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://localhost:3306/world?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
     username: root
     password: 594682797
     driver-class-name: com.mysql.jdbc.Driver
+  data:
+    solr:
+      zk-host: 192.168.13.129:2181
 mybatis:
   mapper-locations: mapper/*.xml
 sensor:
@@ -14,5 +17,3 @@ sensor:
   dataLength: 27
 server:
   port: 8080
-logging:
-  path: logs
