--- a/springboottest08/pom.xml
+++ b/springboottest08/pom.xml
@@ -39,8 +39,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
+
     </dependencies>
-<!-- 定时任务 -->
+    <!-- 定时任务 -->
     <build>
         <plugins>
             <plugin>
